# Prompt-Engineering-Tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: config.yaml
conf/prompts/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
data/: labels.csv
notebooks/: prompt_engineering_tutorial.ipynb
scripts/: prompt_engineering_demo.py
src/prompt_engineering/: utils.py
